--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "electron": "^29.2.0"
   },
   "dependencies": {
+    "node-ps": "^0.0.2",
+    "ps-node": "^0.1.6",
     "toastify-js": "^1.12.0"
   }
 }
