--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snes_panel",
-  "productName": "snes_panel",
+  "productName": "SNES Control Panel",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -14,8 +14,6 @@
     "electron": "^29.2.0"
   },
   "dependencies": {
-    "node-ps": "^0.0.2",
-    "ps-node": "^0.1.6",
-    "toastify-js": "^1.12.0"
+    "toml": "^3.0.0"
   }
 }
