--- a/config.toml
+++ b/config.toml
@@ -11,3 +11,6 @@ Funtoon = "https://funtoon.party/qusb/"
 
 [start]
 apps = ["SNI", "Tracker"]
+
+[snes_controller]
+usb2snes_address = "ws://localhost:8080/"
