--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron": "^29.2.0"
   },
   "dependencies": {
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "websocket": "^1.0.34"
   }
 }
