--- a/config.toml
+++ b/config.toml
@@ -1,35 +1,42 @@
 [apps.SNI]
-cmd = "E:\Speedrunning\sni-v0.0.96-windows-amd64\sni.exe"
-working_directory="E:\Speedrunning\sni-v0.0.96-windows-amd64"
-args=""
-env="SNI_USB2SNES_LISTEN_ADDRS=0.0.0.0:23074,0.0.0.0:8080"
-display="SNI"
+cmd = 'E:\Speedrunning\sni-v0.0.96-windows-amd64\sni.exe'
+working_directory='E:\Speedrunning\sni-v0.0.96-windows-amd64'
+args=[]
+env='SNI_USB2SNES_LISTEN_ADDRS=0.0.0.0:23074,0.0.0.0:8080'
+display='SNI'
 
 [apps.FileViewer]
-cmd = "E:\Speedrunning\sni-v0.0.96-windows-amd64\manage_files.exe"
-display = "File Explorer"
+cmd = 'E:\Speedrunning\sni-v0.0.96-windows-amd64\manage_files.exe'
+display = 'File Explorer'
 
 [apps.InputViewer]
-cmd = "E:\Speedrunning\sni-v0.0.96-windows-amd64\InputDisplay\snes_input_display-windows-amd64.exe"
+cmd = 'E:\Speedrunning\sni-v0.0.96-windows-amd64\InputDisplay\snes_input_display-windows-amd64.exe'
 
 [apps.Tracker]
-cmd = "C:\Program Files (x86)\EmoTracker\EmoTracker.exe"
+cmd = 'C:\Program Files (x86)\EmoTracker\EmoTracker.exe'
 
 [apps.SMTileViewer]
-cmd = "E:\Speedrunning\sni-v0.0.96-windows-amd64\SMTileViewer\SMTileViewer.exe"
+cmd = 'E:\Speedrunning\sni-v0.0.96-windows-amd64\SMTileViewer\SMTileViewer.exe'
 
 [apps.LiveSplit]
-cmd = "E:\Speedrunning\LiveSplit_1.8.21\LiveSplit.exe"
+cmd = 'E:\Speedrunning\LiveSplit_1.8.21\LiveSplit.exe'
+display = 'PRKD Splits'
+args = ['-l', 'E:\Speedrunning\splits\PRKD.lsl', '-s', 'E:\Speedrunning\splits\Super Metroid - Any% (PRKD, NTSC, SNES).lss']
+
+[apps.Timer]
+cmd = 'E:\Speedrunning\LiveSplit_1.8.21\LiveSplit.exe'
+display = 'Timer'
+args = ['-l', 'E:\Speedrunning\splits\timer.lsl', '-s', 'E:\Speedrunning\splits\timer.lss']
 
 [webpages]
-Funtoon = "https://funtoon.party/qusb/"
-"Subversion Tracker" = "https://cout.github.io/sm_subversion_tracker/"
+Funtoon = 'https://funtoon.party/qusb/'
+'Subversion Tracker' = 'https://cout.github.io/sm_subversion_tracker/'
 
 [start]
-apps = ["SNI"]
+apps = ['SNI']
 
 [snes_controller]
-usb2snes_address = "ws://localhost:23074/"
+usb2snes_address = 'ws://localhost:23074/'
 notes_blurb = '''
 Livesplit Hotkeys:
     F1 - Reset
