Working on packaging...

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder --win=portable"
   },
   "author": "cheesyboatride",
   "license": "GPL-3.0-or-later",
@@ -23,10 +23,10 @@
   "build": {
     "productName": "SNES Control Panel",
     "appId": "com.cheesyboatride.snes_panel",
-    "win": {
-        "target": [
-            "portable"
-        ]
-    }
+    "extraResources": [
+      {
+          "filter": ["./config.toml"]
+      }
+  ]
   }
 }
