--- a/config.toml
+++ b/config.toml
@@ -45,8 +45,17 @@ cmd = 'C:\Program Files\obs-studio\bin\64bit\obs64.exe'
 Funtoon = 'https://funtoon.party/funtoon2snes/'
 'Subversion Tracker' = 'https://cout.github.io/sm_subversion_tracker/'
 
+
+[apps.Notepad1]
+display = 'Notepad'
+cmd = 'notepad'
+
+[apps.Notepad2]
+display = 'Notepad'
+cmd = 'notepad'
+
 [start]
-apps = ['SNI']
+apps = []
 
 [snes_controller]
 usb2snes_address = 'ws://localhost:23074/'
