--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "snes_panel",
   "productName": "SNES Control Panel",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "SNES Control Panel is a centralized user interface for managing various USB2SNES services, as well as a starting point for adding extra capabilities.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "cheesyboatride",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "electron": "^29.2.0",
-    "electron-builder": "^24.13.3"
+    "@electron-forge/cli": "^7.8.0",
+    "@electron-forge/maker-deb": "^7.8.0",
+    "@electron-forge/maker-rpm": "^7.8.0",
+    "@electron-forge/maker-squirrel": "^7.8.0",
+    "@electron-forge/maker-zip": "^7.8.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
+    "@electron-forge/plugin-fuses": "^7.8.0",
+    "@electron/fuses": "^1.8.0",
+    "electron": ">=35"
   },
   "dependencies": {
-    "toml": "^3.0.0",
-    "websocket": "^1.0.34"
+    "electron-squirrel-startup": "^1.0.1",
+    "toml": ">=3.0.0",
+    "websocket": ">=1.0.34"
   },
-  "build": {
-    "productName": "SNES Control Panel",
-    "appId": "com.cheesyboatride.snes_panel",
-    "win": {
-      "target": [
-        "portable"
-      ]
-    }
-  }
+  "config": { "forge": "./forge.config.js" }
 }
