Add the ability to load custom HTML files as apps that can use SNI hooks

--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,10 @@ display = 'SM Tile Viewer'
 cmd = '.\LiveSplit_1.8.21\LiveSplit.exe'
 display = 'Live Split'
 
+[apps.TowerOfFate]
+html = '.\render\tower_of_fate.html'
+display = 'Tower Of Fate'
+
 ###########################################################################################
 
 [webpages]
