--- a/config.json
+++ b/config.json
@@ -15,23 +15,65 @@
             "cmd": "E:/Speedrunning/sni-v0.0.96-windows-amd64/manage_files.exe"
         },
         {
-            "name": "Input Viewer",
+            "name": "Metroid Inputs",
             "cmd": "E:/Speedrunning/sni-v0.0.96-windows-amd64/InputDisplay/snes_input_display-windows-amd64.exe",
             "args": [
                 "settings_sm.toml"
             ]
         },
         {
-            "name": "Input Viewer SMW",
+            "name": "SMW Inputs",
             "cmd": "E:/Speedrunning/sni-v0.0.96-windows-amd64/InputDisplay/snes_input_display-windows-amd64.exe",
             "args": [
                 "settings_smw.toml"
             ]
         },
-
         {
             "name": "Tracker",
             "cmd": "E:/Speedrunning/EmoTracker/EmoTracker.exe"
+        },
+        {
+            "name": "SM Tile Viewer",
+            "cmd": "E:/Speedrunning/sni-v0.0.96-windows-amd64/SMTileViewer/SMTileViewer.exe"
+        },
+        {
+            "name": "Timer",
+            "cmd": "E:/Speedrunning/LiveSplit_1.8.21/LiveSplit.exe",
+            "args": [
+                "-l", "E:/Speedrunning/splits/timer.lsl", "-s", "E:/Speedrunning/splits/timer.lss"
+            ]
+        },
+        {
+            "name": "PRKD Splits",
+            "cmd": "E:/Speedrunning/LiveSplit_1.8.21/LiveSplit.exe",
+            "args": [
+                "-l", "E:/Speedrunning/splits/PRKD.lsl", "-s", "E:/Speedrunning/splits/Super Metroid - Any% (PRKD, NTSC, SNES).lss"
+            ]
+        },
+        {
+            "name": "KPDR Splits",
+            "cmd": "E:/Speedrunning/LiveSplit_1.8.21/LiveSplit.exe",
+            "args": [
+                "-l", "E:/Speedrunning/splits/KPDR.lsl", "-s", "E:/Speedrunning/splits/Super Metroid - Any% (KPDR, NTSC).lss"
+            ]
+        },
+        {
+            "name": "GPW3 Splits",
+            "cmd": "E:/Speedrunning/LiveSplit_1.8.21/LiveSplit.exe",
+            "args": [
+                "-l", "E:/Speedrunning/splits/gpw3_any.lsl", "-s", "E:/Speedrunning/splits/Grand Poo World 3 - Any%.lss"
+            ]
+        },
+        {
+            "name": "GPW3 End Segment Splits",
+            "cmd": "E:/Speedrunning/LiveSplit_1.8.21/LiveSplit.exe",
+            "args": [
+                "-l", "E:/Speedrunning/splits/gpw3_last_world.lsl", "-s", "E:/Speedrunning/splits/Grand Poo World 3 - Any% - Last World Segment.lss"
+            ]
+        },
+        {
+            "name": "Archipelago SNI Client",
+            "cmd": "E:/Speedrunning/Archipelago/ArchipelagoSNIClient.exe"
         }
     ],
     "applets": [
