--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "snes_panel",
   "productName": "SNES Control Panel",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "SNES Control Panel is a centralized user interface for managing various USB2SNES services, as well as a starting point for adding extra capabilities.",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "package": "electron-forge package",
@@ -18,12 +19,17 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron/fuses": "^1.8.0",
-    "electron": ">=35"
+    "@types/electron": "^1.4.38",
+    "@types/node": "^24.9.1",
+    "@types/ws": "^8.18.1",
+    "electron": "^38.4.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
-    "toml": ">=3.0.0",
-    "websocket": ">=1.0.34"
+    "ws": "^8.18.3"
   },
-  "config": { "forge": "./forge.config.js" }
+  "config": {
+    "forge": "./forge.config.js"
+  }
 }
